# claude-total-recall

./: .gitignore  .mcp.json  README.md  precommit  pyproject.toml
.claude-plugin/: marketplace.json  plugin.json
skills/conversation-recall/: SKILL.md
src/claude_total_recall/: __init__.py  config.py  indexer.py  loader.py  models.py  query.py  server.py
tests/: __init__.py  conftest.py  test_indexer.py  test_loader.py  test_models.py  test_query.py  test_server.py
